# powersync-tauri-jf

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml
guest-js/: TauriDBAdapter.ts  TauriPowerSyncDatabaseFull.ts  TauriStreamingSyncImplementation.ts  TauriWebSocket.ts  index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: execute_batch.toml  get_crud_batch.toml  get_optional.toml  get_powersync_version.toml  get_write_checkpoint.toml  has_pending_crud.toml  is_powersync_loaded.toml  powersync_control.toml  remove_crud.toml  replace_schema.toml
permissions/schemas/: schema.json
src/: commands.rs  database.rs  error.rs  extension.rs  lib.rs
tauri-plugin-powersync/: CLAUDE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
tauri-plugin-powersync/guest-js/: TauriDBAdapter.ts  TauriPowerSyncDatabase.ts  index.ts  types.ts
tauri-plugin-powersync/permissions/: default.toml
tauri-plugin-powersync/permissions/autogenerated/: reference.md
tauri-plugin-powersync/permissions/schemas/: schema.json
tauri-plugin-powersync/src/: commands.rs  database.rs  error.rs  lib.rs
tauri-plugin-powersync/test-app/: package-lock.json
tauri-plugin-powersync/test-app/src/: main.ts
tauri-plugin-powersync/test-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-powersync/test-app/src-tauri/capabilities/: default.json
tauri-plugin-powersync/test-app/src-tauri/src/: lib.rs
tauri-plugin-powersync/tests/: transactions.test.ts
test-app/: .gitignore  index.html  package.json  vite.config.ts
test-app/src/: main.ts
test-app/src-tauri/: Cargo.toml
test-app/src-tauri/capabilities/: default.json
test-app/src-tauri/src/: lib.rs
tests/: crud.test.ts
