[package]
name = "tauri-plugin-powersync-jf"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin providing PowerSync with native SQLite"
license = "MIT"
repository = "https://github.com/jfairbairn/powersync-tauri"
links = "tauri-plugin-powersync-jf"
exclude = ["deps/", "test-app/"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = { version = "2", features = ["build"] }
rusqlite = { version = "0.33", features = ["bundled", "load_extension"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"
base64 = "0.22"

[features]
default = []
