[package]
name = "tauri-plugin-powersync"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin providing PowerSync with native SQLite"
license = "MIT"
repository = "https://github.com/powersync-ja/powersync-tauri"
links = "tauri-plugin-powersync"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = { version = "2", features = ["build"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"
base64 = "0.22"

# TODO: Integrate powersync-sqlite-core extension
# Options:
# 1. Build powersync_loadable as .dylib/.so and load via rusqlite load_extension
# 2. Create a custom build that links powersync_core with rusqlite's bundled SQLite
# For now, basic SQLite works - PowerSync sync features will be added once extension is integrated

[features]
default = []
