[package]
name = "test-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "test_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-powersync-jf = { path = "../.." }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
